[package]
name = "manual_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pelite = "0.10.0"
thiserror = "1.0.40"
winapi = { version = "0.3.9", features = ["processthreadsapi", "handleapi", "wow64apiset", "errhandlingapi", "libloaderapi", "tlhelp32", "winbase"] }
